@@ -1,5 +1,8 @@
 DATE        AUTHOR    CHANGE
 ----------- --------- ---------------------------------------------------------
+2002-06-23 patrickh   The gadgeteer-config script is now written in Perl.  It
+                      is capable of determining its installation path at
+                      runtime.
 Jun-21-2002 allenb    Simplified XWin keyboard by removing old unneeded update
                       flag.  Also corrected a couple of potential bugs.
 Jun-20-2002 allenb    XWin keyboard now only lock the mouse when Alt, Ctrl, 
